[package]
name = "libloot"
version = "0.27.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
crc32fast = "1.5.0"
esplugin = "6.1.3"
fancy-regex = "0.15.0"
libloadorder = "18.4.0"
log = { version = "0.4.26", features = ["std"] }
loot-condition-interpreter = "5.3.2"
petgraph = "0.8.1"
rayon = "1.10.0"
rustc-hash = "2.1.1"
saphyr = "0.0.6"
unicase = "2.8.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
parameterized-test = { path = "./parameterized-test" }
tempfile = "3.17.1"

[lints]
workspace = true

[workspace]
members = ["cpp", "ffi-errors", "nodejs", "parameterized-test", "python"]

[profile.release]
debug = "limited"
lto = "thin"

[profile.rel-with-deb-info]
inherits = "release"
opt-level = 2
debug = "limited"

# Deny some rustc lints that are allow-by-default.
[workspace.lints.rust]
ambiguous_negative_literals = "deny"
impl_trait_overcaptures = "deny"
let_underscore_drop = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = "deny"
allow_attributes = "deny"
as_conversions = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
big_endian_bytes = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
doc_include_without_cfg = "deny"
empty_drop = "deny"
error_impl_error = "deny"
exit = "deny"
exhaustive_enums = "deny"
expect_used = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
iter_over_hash_type = "deny"
let_underscore_must_use = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
mixed_read_write_in_expression = "deny"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "deny"
non_zero_suggestions = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
precedence_bits = "deny"
print_stderr = "deny"
print_stdout = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
rest_pat_in_fully_bound_structs = "deny"
str_to_string = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unneeded_field_pattern = "deny"
unreachable = "deny"
unused_result_ok = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"
