[package]
name = "array-parameterized-test"
description = "Parameterized testing using an input array."
categories = ["development-tools::testing"]
version = "1.0.0"
repository.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[lib]
proc-macro = true

[lints]
workspace = true
