[package]
name = "array-parameterized-test"
description = "Parameterized testing using an input array."
categories = ["development-tools::testing"]
version = "1.0.0"
repository.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
proc-macro2 = "1.0.83"
quote = "1.0.35"
syn = { version = ">= 1.0.0, < 3", features = ["full"] }

[lib]
proc-macro = true

[lints]
workspace = true
